@@ -459,26 +459,35 @@ fi
 dnl ----------------------------------------------------------------------
 dnl Configure included Boehm GC if needed
 AC_SUBST(ECL_BOEHM_GC_HEADER)
-if test ${enable_boehm} = "included"; then
-  AC_MSG_NOTICE([Configuring included Boehm GC library:])
-  test -d gc && rm -rf gc
-  if mkdir gc; then
+case "${enable_boehm}" in
+  included)
+    AC_MSG_NOTICE([Configuring included Boehm GC library:])
+    test -d gc && rm -rf gc
+    if mkdir gc; then
      (destdir=`${PWDCMD}`; cd gc; \
       CC="${CC} ${PICFLAG}" CFLAGS="${CFLAGS}" LDFLAGS="${LDFLAGS}" \
         $srcdir/gc/configure --disable-shared --prefix=${destdir} \
 	--includedir=${destdir}/ecl/gc/ --libdir=${destdir} --build=${build_alias} \
 	--host=${host_alias} ${boehm_configure_flags})
-     ECL_BOEHM_GC_HEADER='ecl/gc/gc.h'
-  else
-     if test -f /usr/include/gc/gc.h -o test -f /usr/local/include/gc/gc.h; then
-        ECL_BOEHM_GC_HEADER='gc/gc.h'
-     else
-        ECL_BOEHM_GC_HEADER='gc.h'
-     fi
-  fi
-else
-  ECL_BOEHM_GC_HEADER='none'
-fi
+      ECL_BOEHM_GC_HEADER='ecl/gc/gc.h'
+    else
+      AC_MSG_ERROR([Unable to create 'gc' directory])
+    fi
+    ;;
+  system)
+    AC_CHECK_HEADER([gc.h],[ECL_BOEHM_GC_HEADER='gc.h'],[],[])
+    if test -z "$ECL_BOEHM_GC_HEADER"; then
+       AC_CHECK_HEADER([gc/gc.h],[ECL_BOEHM_GC_HEADER='gc/gc.h'],[],[])
+    fi
+    if test -z "$ECL_BOEHM_GC_HEADER"; then
+       AC_MSG_ERROR([Boehm-Weiser garbage collector's headers not found])
+    fi
+    ;;
+  no)
+    ECL_BOEHM_GC_HEADER='none';;
+  *)
+    AC_MSG_ERROR([Not a valid argument for --enable-boehm $enable_boehm]);;
+esac
 
 dnl ----------------------------------------------------------------------
 dnl Configure local GMP if needed
